--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -15,3 +15,9 @@ tasks:
     cmds:
       - go run cmd/sso/main.go --config=./config/local.yaml
 
+  test_migrations:
+    aliases:
+      - test_migrate
+    desc: "Run test migrations"
+    cmds:
+      - go run ./cmd/migrator/main.go --storage-path=./storage/sso.db --migrations-path=./tests/migrations --migrations-table=migrations_test
